# AgentLeak

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  DIAGNOSTIC_TEST_RIGOR.md  DIAGNOSTIC_WORK_COMPLETE.md  DOCUMENTATION_INDEX.md  INSTALL.md  LICENSE  PAYLOAD_VERIFICATION_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  REVISION_SUMMARY.md  VALIDATION_SUMMARY.md  WHY_SIMPLE_PAYLOADS_WORK.md  paper.tex  pyproject.toml  pytest.ini  references.bib  requirements.txt  setup.sh
agentleak/: README.md  __init__.py  __main__.py  config.py  runner.py  tester.py
agentleak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentleak_data/: __init__.py  agentleak_1000.jsonl  agentleak_1000_old.jsonl  agentleak_1000_summary.json  internal_channel_attack_traces.jsonl  llm_judge_prompt.txt  migration.py  scenario_example.jsonl  trace_sample.jsonl
archive/: AUDIT_REPORT.md  DEVELOPMENT_PLAN.md  FRAMEWORK_STATUS.md
benchmark_results/: FINAL_RESULTS.json  FINAL_RESULTS.md  FINAL_TABLES.tex  TSCP_CONSOLIDATED_RESULTS.md  adversarial_classes_table.tex  adversarial_family_table.tex  adversarial_full_20260111_195928.json  benchmark_20251227_203350.json  benchmark_20251227_204121.json  benchmark_20251227_211652.json  benchmark_20251227_211851.json  benchmark_20251227_211913.json  evaluation_summary.md  internal_agent_attack_poc.json  internal_defense_test.json  report_20251227_203350.md  summary_20251227_203350.txt  summary_20251227_204121.txt  summary_20251227_211652.txt  summary_20251227_211851.txt  summary_20251227_211913.txt  traces_20251227_203350.jsonl  traces_20251227_204121.jsonl  traces_20251227_211851.jsonl  traces_20251227_211913.jsonl  tscp_table_rf1.tex  tscp_test1_h1_results.json
configs/: paper_v1.json
docs/: CORRECTIONS_APPLIED.md  DOCUMENTATION.md  EMPIRICAL_RESULTS.md  F5_COT_ATTACKS.md  MULTIFRAMEWORK_EVALUATION.md  PAPER_CODE_MAPPING.md  index.html
figures/: .$Fig_System_Architecture_AgentLeak_Complete.drawio.bkp  Fig_Attack_Taxonomy_Improved.drawio  Fig_Framework_Agnostic_Harness.drawio  Fig_System_Architecture_AgentLeak_Complete.drawio
outputs/: unified_eval_20251225_161354.json  unified_eval_20251225_161419.json  unified_eval_20251225_161831.json
scripts/: BENCHMARK_README.md  adversarial_full_evaluation.py  analyze_internal_channels.py  (+26 more)
(+949 files in other folders)
