[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentleak"
version = "1.0.0"
description = "A Full-Stack Benchmark for Privacy Leakage in Multi-Agent LLM Systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Faouzi EL YAGOUBI", email = "faouzi.elyagoubi@polymtl.ca"},
    {name = "Ranwa AL MALLAH", email = "ranwa.al-mallah@polymtl.ca"},
]
keywords = ["llm", "privacy", "benchmark", "agents", "security", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "faker>=20.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "tqdm>=4.65",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
]
all = ["agentleak[dev,notebooks]"]

[project.scripts]
agentleak = "agentleak.cli.app:main"

[project.urls]
Homepage = "https://github.com/privatris/agentleak"
Repository = "https://github.com/privatris/agentleak"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentleak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = false
